feat(auth): add AuthProvider for user authentication

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 EXPO_PUBLIC_API_URL=https://staging.example.com
 EXPO_PUBLIC_API_KEY=52af7987a63599e89ff7d92bf15c0ec74fac98ac3c8bf34a
+EXPO_PUBLIC_USER_ENDPOINT=http://localhost:5000/api/Users
 
